# lab_second_semestr

./: .gitignore  README.md
Lab_02_custom_string/: CMakeLists.txt  MyString.cpp  MyString.hpp  main.cpp
Lab_03_test_copy/: CMakeLists.txt
Lab_03_test_copy/gui_app/: mainwindow.cpp  mainwindow.ui
Lab_03_test_copy/mylib_shared/inc/: functions.hpp
Lab_03_test_copy/mylib_shared/src/: functions.cpp
Lab_04/: CMakeLists.txt
Lab_04/gui_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  photos.qrc
Lab_04/mylib_shared/: CMakeLists.txt
Lab_04/mylib_shared/inc/: functions.hpp
Lab_04/mylib_shared/src/: functions.cpp
gui_app/: CMakeLists.txt  mainwindow.h
mylib_shared/inc/: functions.hpp
mylib_shared/src/: functions.cpp
